# oidc-auth-client

./: .gitignore  AuthService.js  CONSOLIDATION_PLAN.md  CONSOLIDATION_SUMMARY.md  LICENSE  README.md  TEST_SUITE_SUMMARY.md  index.js  index.ts  oidc-consolidation-diagram.mermaid  package-lock.json  package.json  tsconfig.json  typedoc.json  version.js  vitest.config.js
.github/workflows/: ci.yml  publish.yml
.husky/: pre-commit
docs/examples/: README.md
docs/examples/server/fastapi/: README.md  main.py  pyproject.toml
examples/: README.md
examples/advanced-features/: README.md
examples/api/: README.md  package.json
examples/provider/: README.md
examples/react/: README.md  index.html  package.json  src-auth-AuthContext.jsx  vite.config.js
examples/security/: README.md
examples/spa/: app.js  (+5 more)
src/: AccessTokenEvents.js  CheckSessionIFrame.js  ClockService.js  CordovaIFrameNavigator.js  CordovaPopupNavigator.js  CordovaPopupWindow.js  ErrorResponse.js  Event.js  Global.js  IFrameNavigator.js  IFrameWindow.js  InMemoryWebStorage.js  JoseUtil.js  JoseUtilImpl.js  JoseUtilRsa.js  JsonService.js  Log.js  MetadataService.js  OidcClient.js  OidcClientSettings.js  PopupNavigator.js  PopupWindow.js  RedirectNavigator.js  ResponseValidator.js  SessionMonitor.js  SigninRequest.js  SigninResponse.js  SigninState.js  SignoutRequest.js  SignoutResponse.js  SilentRenewService.js  State.js  Timer.js  TokenClient.js  TokenRevocationClient.js  UrlUtility.js  User.js  UserInfoService.js  UserManager.js  UserManagerEvents.js  (+3 more)
tests/: README.md  imports.test.js  setup.js
(+156 files in other folders)
