[project]
name = "fastapi-oidc-server"
version = "1.0.0"
description = "FastAPI OIDC resource server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
